# src/services/events/teams/models.rs
@@ -1,9 +1,9 @@
 use serde::{Deserialize, Serialize};
 
-/// Database representation of an EventTeam
+/// Database representation of an Team
 #[derive(sqlx::FromRow, Deserialize, Serialize, Debug)]
-pub struct EventTeam {
-    pub event_team_id: i32,
+pub struct Team {
+    pub team_id: i32,
     pub event_id: i32,
     pub name: String,
     pub score: i32,
@@ -11,29 +11,24 @@ pub struct EventTeam {
     pub created_at: chrono::NaiveDateTime,
 }
 
-/// Database representation of an EventTeam row
-#[derive(sqlx::FromRow, Deserialize, Serialize, Clone, Debug)]
-pub struct EventTeamRow {
-    pub event_team_id: i32,
-    pub event_id: i32,
-    pub name: String,
-    pub score: i32,
-    pub winner: bool,
-    pub created_at: chrono::NaiveDateTime,
-    pub event_player_id: i32,
-}
-
-/// Representation of a new EventTeam
+/// Representation of a new Team
 #[derive(sqlx::FromRow, Deserialize, Serialize, Debug)]
-pub struct NewEventTeam {
+pub struct NewTeam {
+    pub event_id: i32,
     pub name: String,
     pub players: Vec<i32>,
 }
 
-/// Representation of a new EventTeamParticipant
+/// Representation of a new TeamPlayer
 #[derive(sqlx::FromRow, Deserialize, Serialize, Debug)]
-pub struct EventTeamPlayer {
-    pub event_team_id: i32,
-    pub event_player_id: i32,
+pub struct TeamPlayer {
+    pub team_id: i32,
+    pub player_id: i32,
     pub created_at: chrono::NaiveDateTime,
+}
+
+/// Query params for getting teams of a specific event
+#[derive(sqlx::FromRow, Deserialize, Serialize, Debug)]
+pub struct TeamQueryParams {
+    pub event_id: i32
 }
